Small adjustment to media grid to prevent cutoff

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -64,6 +64,7 @@
       //height: 100vh;
       @media (max-width: 768px) {
         padding: 75px 0 75px 0;
+        margin-left: -5px;
       }
       .row {
         @media (max-width: 768px) {
@@ -186,7 +187,7 @@
       max-width: 720px - 240px - 25px;
     }
     @media (max-width: 768px) {
-      padding: 0 0 0 15px;
+      padding: 0 0 0 10px;
       margin-left: -15px;
       max-width: 576px;
     }
